--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\guimi\\Anaconda3\\envs\\Flask\\python.exe"
+    "python.pythonPath": "C:\\Users\\guimi\\Anaconda3\\envs\\Flask\\python.exe",
+    "editor.fontSize": 12
 }
